---
source: book/tests/snapshot.rs
expression: "from orders\nsort day\nwindow rows:-3..3 (\n  derive [centered_weekly_average = average value]\n)\ngroup [order_month] (\n  sort day\n  window expanding:true (\n    derive [monthly_running_total = sum value]\n  )\n)\n"
---
from orders
sort day
window rows:-3..3 (
  derive [centered_weekly_average = average value]
)
group [order_month] (
  sort day
  window expanding:true (
  derive [monthly_running_total = sum value]
)
)



